update openai definition
