# nodejs-server-server-generated/service/SessionService.js
@@ -1,0 +1,22 @@
+'use strict';
+
+
+exports.startSession = function(body) {
+  return new Promise(function(resolve, reject) {
+    // Here you would typically validate the email/password
+    // and create a session token
+    
+    var examples = {};
+    examples['application/json'] = {
+      "user_id": "123e4567-e89b-12d3-a456-426614174000",
+      "auth_header": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+    };
+    
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
+  });
+}
+
